--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,65 +1,65 @@
 @import "../colors/color.css";
 
 * {
-    font-family: "JetBrainsMono Nerd Font";
-    font-size: 13px;
-    font-weight: bold;
-    background-color: transparent;
-    border-radius: 5px;
-    min-height: 0;
+  font-family: "JetBrainsMono Nerd Font";
+  font-size: 13px;
+  font-weight: bold;
+  background-color: transparent;
+  border-radius: 5px;
+  min-height: 0;
 }
 
 window,
 tooltip {
-    background-color: @background;
-    color: @foreground;
+  background-color: @background;
+  color: @foreground;
 }
 
 #waybar {
-    background: alpha(@background, 0.6);
-    border-radius: 0;
+  background: alpha(@background, 0.6);
+  border-radius: 0;
 }
 
 /* Workspaces */
 /* Workspaces pill container */
 #workspaces {
-    background: transparent;
-    border-radius: 10px;
-    margin-left: 10px;
-    padding: 3px 6px;                 /* internal padding */
-    /* border: 1px solid @select; */
-    opacity: 0.8;
+  background: transparent;
+  border-radius: 10px;
+  margin-left: 10px;
+  padding: 3px 6px; /* internal padding */
+  /* border: 1px solid @select; */
+  opacity: 0.8;
 }
 
 /* Workspace buttons as small blocks */
 #workspaces button {
-    all: unset;
-    padding: 0px 12px;
-    min-width: 18px;                 /* small square-ish capsule */
-    min-height: 18px;
-    margin: 0 3px;                   /* spacing between buttons */
-    border-radius: 6px;              /* slight rounding, not full */
-    background: @background;             /* inactive workspace */
+  all: unset;
+  padding: 0px 12px;
+  min-width: 18px; /* small square-ish capsule */
+  min-height: 18px;
+  margin: 0 3px; /* spacing between buttons */
+  border-radius: 6px; /* slight rounding, not full */
+  background: @background; /* inactive workspace */
 }
 
 /* Hover workspace */
 #workspaces button:hover {
-    background: #a6adc8;             /* lighter hover */
+  background: #a6adc8; /* lighter hover */
 }
 
 /* Active workspace */
 #workspaces button.active {
-    background: @purple;             /* Catppuccin Mauve */
+  background: @purple; /* Catppuccin Mauve */
 }
 
 /* Focused workspace */
 #workspaces button.focused {
-    background: @blue;             /* Catppuccin Blue */
+  background: @blue; /* Catppuccin Blue */
 }
 
 /* Urgent workspace */
 #workspaces button.urgent {
-    background: #f38ba8;             /* Catppuccin Red */
+  background: #f38ba8; /* Catppuccin Red */
 }
 
 #custom-power,
@@ -70,10 +70,11 @@ tooltip {
 #pulseaudio,
 #clock,
 #temperature,
-#backlight {
-    color: @foreground;
-    margin: 1px 0;
-    padding: 0 10px;
+#backlight,
+#window {
+  color: @foreground;
+  margin: 1px 0;
+  padding: 0 10px;
 }
 
 #custom-power:hover,
@@ -83,43 +84,53 @@ tooltip {
 #pulseaudio:hover,
 #clock:hover,
 #temperature:hover,
-#backlight:hover {
-    background-color: alpha(@select, 0.6);
+#backlight:hover,
+#window:hover {
+  background-color: alpha(@select, 0.6);
 }
 
 /* Individual colors */
 #bluetooth {
-    color: @yellow;
+  color: @yellow;
 }
 
 #network {
-    color: @green;
+  color: @green;
 }
 
 #battery {
-    color: @purple;
+  color: @purple;
+}
+#battery.critical {
+  color: @red;
 }
 
 #pulseaudio {
-    color: @orange;
+  color: @orange;
 }
 
 #clock {
-    margin-right: 10px;
-    color: @blue;
+  margin-right: 10px;
+  color: @blue;
 }
 
 #temperature {
-    color:  @green;/* Heat usually red */
+  color: @green; /* Heat usually red */
 }
 #temperature.critical {
-    color: @red;
+  color: @red;
 }
 
 #backlight {
-    color: @pink; /* Soft accent for brightness */
+  color: @pink; /* Soft accent for brightness */
 }
 
 #custom-power {
-    padding: 0px 10px 0 15px;
+  /* padding: 0px 10px 0 15px; */
+  margin-left: 5px;
+}
+
+#window.empty {
+  color: alpha(@foreground, 0.5); /* faded when no window title */
+  font-style: italic;
 }
